--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Token Factory</title>
+  <title>Jindo Coin</title>
   <link href="./app.css" rel='stylesheet' type='text/css'>
   <script src="./app.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
