--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-<h1> Hello World </h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>JINDCOIN</title>
+<body>
+                   
+  <h1> Welcome to JindCoin! </h1>
+<h2> </h2>
+  </head>
+
+<h2> </h2>
+
+
+<h2> </h2>
+
+<h2> </h2>
+
+
+
+<h2> Developed By Bradley Williamson</h2>
+    </body>
+</html>
