--- a/index.html
+++ b/index.html
@@ -4,21 +4,15 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>JINDCOIN</title>
+</head>
 <body>
-                   
-  <h1> Welcome to JindCoin! </h1>
-<h2> </h2>
-  </head>
-
-<h2> </h2>
-
-
-<h2> </h2>
-
-<h2> </h2>
-
-
-
-<h2> Developed By Bradley Williamson</h2>
-    </body>
+ <h1> Welcome to JindCoin! </h1>
+ <div class="placehodler">
+   Im in a div
+  </div>
+  <div class="anotherClass">
+   Im in another Div
+  </div>
+ <h2> Developed By Bradley Williamson</h2>
+</body>
 </html>
