--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>JINDCOIN</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
  <h1> Welcome to JindCoin! </h1>
